--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.6",
+    "mongodb": "^6.18.0",
     "next": "15.4.5",
     "prettier": "^3.6.2",
     "react": "19.1.0",
